--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_match_event"/>
+        <activity android:name=".DetailEventActivity"/>
     </application>
 
 </manifest>
