--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-ext.anko_version = '0.10.5'
+ext.anko_version = '0.10.7'
 ext.fuel_version = '1.15.0'
 
 android {
@@ -54,4 +54,5 @@ dependencies {
     // Anko Layouts
     implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
 }
